--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "auth"]
 	path = auth
-	url = https://github.com/BackendWorks/auth.git
+	url = https://github.com/menottiRicardo/auth.git
 [submodule "post"]
 	path = post
-	url = https://github.com/BackendWorks/post.git
+	url = https://github.com/menottiRicardo/post.git
 [submodule "mailer"]
 	path = mailer
-	url = https://github.com/BackendWorks/mailer.git
+	url = https://github.com/menottiRicardo/mailer.git
 [submodule "notification"]
 	path = notification
-	url = https://github.com/BackendWorks/notification.git
+	url = https://github.com/menottiRicardo/notification.git
 [submodule "files"]
 	path = files
-	url = https://github.com/BackendWorks/files.git
+	url = https://github.com/menottiRicardo/files.git
