--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,40 +6,16 @@ services:
       dockerfile: Dockerfile
     restart: on-failure
     ports:
-      - "9001:9001"
+      - "3001:3001"
     env_file:
-      - ./auth/.env.dev
+      - ./auth/.env
     networks:
       - backend
     volumes:
       - ./auth:/app/auth
       - /app/auth/node_modules
-    logging:
-      driver: fluentd
-      options:
-        fluentd-async: "true"
-        fluentd-address: localhost:24224
-        tag: auth-service
-  post:
-    build:
-      context: ./post
-      dockerfile: Dockerfile
-    restart: on-failure
-    ports:
-      - "9002:9002"
-    env_file:
-      - ./post/.env.dev
-    networks:
-      - backend
-    volumes:
-      - ./post:/app/post
-      - /app/post/node_modules
-    logging:
-      driver: fluentd
-      options:
-        fluentd-async: "true"
-        fluentd-address: localhost:24224
-        tag: post-service
+    depends_on:
+      - postgres
   mailer:
     build:
       context: ./mailer
@@ -116,23 +92,20 @@ services:
         fluentd-address: localhost:24224
         tag: kong
   postgres:
-    image: postgres:latest
+    image: postgres
+    restart: always
+    container_name: postgres
+    env_file:
+      - .env
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=master123
-      - POSTGRES_DB=postgres
-    volumes:
-      - pg_data:/var/lib/postgresql/data
     networks:
       - backend
-    logging:
-      driver: fluentd
-      options:
-        fluentd-async: "true"
-        fluentd-address: localhost:24224
-        tag: postgres
   rabbitmq:
     image: rabbitmq:3-management
     volumes:
@@ -142,12 +115,6 @@ services:
       - "15672:15672"
     networks:
       - backend
-    logging:
-      driver: fluentd
-      options:
-        fluentd-async: "true"
-        fluentd-address: localhost:24224
-        tag: rabbitmq
   redis:
     image: redis:latest
     ports:
@@ -174,41 +141,6 @@ services:
         fluentd-async: "true"
         fluentd-address: localhost:24224
         tag: mongodb
-  fluent-bit:
-    environment:
-      LOKI_URL: http://loki:3100/loki/api/v1/push
-    build:
-      context: ./fluent-bit
-      dockerfile: Dockerfile
-    ports:
-      - "24224:24224"
-      - "24224:24224/udp"
-    networks:
-      - backend
-  loki:
-    image: grafana/loki:latest
-    expose:
-      - "3100"
-    networks:
-      - backend
-  grafana:
-    image: grafana/grafana:latest
-    ports:
-      - "3000:3000"
-    environment:
-      GF_RENDERING_SERVER_URL: http://renderer:8081/render
-      GF_RENDERING_CALLBACK_URL: http://grafana:3000/
-      GF_LOG_FILTERS: rendering:debug
-    networks:
-      - backend
-  renderer:
-    image: grafana/grafana-image-renderer:latest
-    expose:
-      - "8081"
-    environment:
-      ENABLE_METRICS: "true"
-    networks:
-      - backend
 networks:
   backend:
     driver: bridge
